--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -69,8 +69,6 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      
     </div>
   </nav>
 
@@ -89,14 +87,14 @@
     <div class="col-12">
       <div class="row">
         <div class="col-1">
-          <img id ='r_candidate' src="{{url_for('static', filename='pics/DT.jpeg')}}" class="rounded-circle" />
+          <img id ='r_candidate' class="rounded-circle" />
         </div>
         <div class="col-10">
 			<div>
-				<span class="progress-label" style="font-size:25px">300</span>
-				<span class="pull-right" style="font-size:25px">238</span>
+				<span id="r_votes" class="progress-label" style="font-size:25px"></span>
+				<span id="d_votes" class="pull-right" style="font-size:25px"></span>
 				<div class = "progress" style="height:40px; border-radius: 0; background-color: #0015bc;">
-					<div class="progress-bar" role="progressbar" aria-valuenow="60"
+					<div class="progress-bar" role="progressbar" aria-valuenow="80"
 						aria-valuemin="0" aria-valuemax="538" style="height:40px;width:60%;background-color: #e9141d">
 						<span class = "sr-only">60% Complete</span>
 					</div>
@@ -104,7 +102,7 @@
 			</div>
         </div>
         <div class="col-1">
-          <img id ='d_candidate' src="{{url_for('static', filename='pics/JB.jpeg')}}" class="rounded-circle" />
+          <img id ='d_candidate' class="rounded-circle" />
         </div>
       </div>
     </div>
@@ -208,12 +206,16 @@
     //not the smartest thing.. but works!
     var pic_dict = {
           'BO': '{{url_for('static', filename="pics/BO.jpeg")}}',
+          'JB': '{{url_for('static', filename="pics/JB.jpeg")}}',
+          'JK': '{{url_for('static', filename="pics/JK.jpeg")}}',
           "HC": '{{url_for('static', filename="pics/HC.jpeg")}}',
           "DT": '{{url_for('static', filename="pics/DT.jpeg")}}',
           "MR": '{{url_for('static', filename="pics/MR.jpeg")}}',
+          "GB": '{{url_for('static', filename="pics/GB.jpeg")}}',
+          "JM": '{{url_for('static', filename="pics/JM.jpeg")}}',
+          "AG": '{{url_for('static', filename="pics/AG.jpeg")}}'
         };
 
-    //$('#test_button').click(function () {
       function updateDetails(stateFips, year){
 
         if (year != null){
@@ -231,18 +233,22 @@
 
         var issuesUrlPath = '/issues/' + currentFipsSelection + '?year=' + currentYearSelection
 
+        var electoralUrlPath = '/electoral?year=' + currentYearSelection
+
+      //Details
       $.ajax({
         type: 'GET',
         url: detailsUrlPath,
         success: function (response) {
           $('#state').text(response['details_state_text']).css("font-weight","Bold");
-          $('#top_issue').text(response['details_top_issue']).css("font-weight","Bold");
+          $('#top_issuex').text(response['details_top_issue']).css("font-weight","Bold");
           $('#votes').text(response['details_votes']).css("font-weight","Bold");
           $('#win_margin').text(response['details_win_margin']).css("font-weight","Bold");
           $('#party').text(response['details_party']).css("font-weight","Bold");
         }
       });
 
+      //Issues
       $.ajax({
         type: 'GET',
         url: issuesUrlPath,
@@ -258,8 +264,26 @@
           $('#issues_climate').prop("src", pic_dict[climate_lead]);
         }
       });
+
+      //Electoral Votes
+      $.ajax({
+        type: 'GET',
+        url: electoralUrlPath,
+        success: function (response) {
+          var dem_votes = response['DEM_VOTES']
+          var rep_votes = response['REP_VOTES']
+          var dem_candidate = response['DEM_CANDIDATE']
+          var rep_candidate = response['REP_CANDIDATE']
+          console.log('dem_votes=' + dem_votes)
+          console.log('rep_votes=' + rep_votes)
+
+          $('#d_candidate').prop("src", pic_dict[dem_candidate]);
+          $('#r_candidate').prop("src", pic_dict[rep_candidate]);
+          $('#r_votes').text(rep_votes).css("font-weight","Bold");
+          $('#d_votes').text(dem_votes).css("font-weight","Bold");
+        }
+      });
     }
-    //});
   </script>
 
 </body>
