now update progress bar with actual electoral votes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -94,8 +94,8 @@
 				<span id="r_votes" class="progress-label" style="font-size:25px"></span>
 				<span id="d_votes" class="pull-right" style="font-size:25px"></span>
 				<div class = "progress" style="height:40px; border-radius: 0; background-color: #0015bc;">
-					<div class="progress-bar" role="progressbar" aria-valuenow="80"
-						aria-valuemin="0" aria-valuemax="538" style="height:40px;width:60%;background-color: #e9141d">
+					<div id="progress-bar-perc" class="progress-bar" role="progressbar" aria-valuenow="80"
+						aria-valuemin="0" aria-valuemax="538">
 						<span class = "sr-only">60% Complete</span>
 					</div>
 				</div>
@@ -271,11 +271,13 @@
           var rep_votes = response['REP_VOTES']
           var dem_candidate = response['DEM_CANDIDATE']
           var rep_candidate = response['REP_CANDIDATE']
+          var perc = (rep_votes / 538) * 100 + '%'
 
           $('#d_candidate').prop("src", pic_dict[dem_candidate]);
           $('#r_candidate').prop("src", pic_dict[rep_candidate]);
           $('#r_votes').text(rep_votes).css("font-weight","Bold");
           $('#d_votes').text(dem_votes).css("font-weight","Bold");
+          $('#progress-bar-perc').css({"width":perc,"height":"40x","background-color":"#e9141d"});
         }
       });
     }
