--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,6 +49,11 @@
       user-select: none;
     }
 
+    .bk-slider-parent input[type="text"] {
+      font-size:20px;
+      color: #F00;
+    }
+    
     @media (min-width: 768px) {
       .bd-placeholder-img-lg {
         font-size: 3.5rem;
